<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/Commit_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CommitButton"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_password"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/writeToFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writefile"/>

</LinearLayout>